DEB-228 DEB-253 DEB-263: User settings alignment issues, and users can edit their email address

--- a/src/main/webapp/scss/components/_global.scss
+++ b/src/main/webapp/scss/components/_global.scss
@@ -572,8 +572,9 @@ display: inline-block;
 .placeholderIcon {
     width: 100px;
 }
-.cloudIcon {
+.paperClipIcon {
     margin-right: 10px;
+    color: black;
 }
 .attachmentModalInput{
     color: black !important;
