--- a/src/main/webapp/scss/sections/_account-settings.scss
+++ b/src/main/webapp/scss/sections/_account-settings.scss
@@ -52,7 +52,7 @@ Account Settings
     }
     .drsl-update-user-button{
         float: right;
-        margin-right: 10px;
+        margin-right: 2px;
         margin-top: 70px;
     }
     .authorized-credit-card{
